# TH08-Platform

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: server-ci.yml
dll/: CMakeLists.txt
dll/loader/: loader.cpp
dll/src/: logging.cpp  logging.h  main.cpp
dll/src/hooks/: game_loop.cpp  game_loop.h  input.cpp  input.h  instance_unmutex.cpp  instance_unmutex.h
dll/src/net/: crc32.h  fake_rtt.cpp  fake_rtt.h  lockstep.cpp  lockstep.h  protocol.h  pump_thread.cpp  pump_thread.h  rollback.cpp  rollback.h  udp_socket.cpp  udp_socket.h
dll/src/state/: dual_collision.cpp  dual_collision.h  enemy_aim.cpp  enemy_aim.h  frame_state.cpp  frame_state.h  globals.h  heap_journal.cpp  heap_journal.h  hud.cpp  hud.h  item_routing.cpp  item_routing.h  p2_input.cpp  p2_input.h  p2_lives.cpp  p2_lives.h  p2_mirror.cpp  p2_mirror.h  peer_ghost.cpp  peer_ghost.h  peer_ghost_sprite.cpp  peer_ghost_sprite.h  player2.cpp  player2.h  player2_hook.cpp  player2_hook.h  player_layout.h  rng_sync.cpp  rng_sync.h
docs/: 6a_mutex_finding.md  6b_lockstep_audit.md  6c_rng_sync_audit.md  6d_peer_ghost_audit.md  DLL_PLAN.md  decomp_master_plan.md  decomp_progress.csv  phase6_plan.md
docs/worksheets/: batch10_decomp_continuation_prompt.md  batch11_decomp_continuation_prompt.md  batch12_critical_stubs_prompt.md  batch13a_player_helpers_prompt.md  batch13b_near_miss_finishers_prompt.md  batch8_decomp_continuation_prompt.md  batch9_decomp_continuation_prompt.md  binary_patcher_design.md  decomp_batch11_medium.md  decomp_batch12_linkage.md  decomp_batch13_player.md  decomp_batch13b_gamemgr.md  decomp_batch13c_enemymgr.md  decomp_batch13d_items.md  phase1_state_capture_prompt.md  phase2_input_hook_prompt.md  phase3_udp_lockstep_prompt.md  phase4_rollback_netcode_prompt.md  phase5_true_2p_design.md  phase5i_routing_re_survey.md  worksheet.md  worksheet_v2.md  worksheet_v3.md  worksheet_v4.md  worksheet_v5.md  worksheet_v6.md  worksheet_v7.md  worksheet_v8.md
game/: .gitignore  .pre-commit-config.yaml  README.md  objdiff.json  reccmp-project.yml
game/.github/workflows/: compare.yml
game/config/: ghidra_ns_to_obj.csv  i18n.csv  implemented.csv  mapping.csv  reccmp-strings.csv
game/scripts/: build.py  compare_function_bytes.py  configure.py  create_devenv.py  export_ghidra_to_reccmp.py  generate_i18n.py  generate_reccmp_diff.py  generate_stubs.py
game/src/: AnmManager.cpp  AnmManager.hpp  AsciiManager.cpp  AsciiManager.hpp  Background.cpp  Background.hpp  BulletManager.cpp  BulletManager.hpp  Ending.cpp  Ending.hpp  EnemyManager.cpp  EnemyManager.hpp  GameManager.cpp  GameManager.hpp  Global.cpp  Global.hpp  Gui.cpp  Gui.hpp  ItemManager.cpp  ItemManager.hpp  Midi.cpp  Midi.hpp  MusicRoom.cpp  MusicRoom.hpp  Player.cpp  Player.hpp  ResultScreen.cpp  ResultScreen.hpp  ScoreDat.cpp  ScoreDat.hpp  ScreenEffect.cpp  ScreenEffect.hpp  SoundPlayer.cpp  SoundPlayer.hpp  Supervisor.cpp  Supervisor.hpp  TextHelper.cpp  TextHelper.hpp  TitleScreen.cpp  TitleScreen.hpp  (+7 more)
game/src/pbg/: Lzss.cpp  Lzss.hpp  PbgArchive.cpp  PbgFile.cpp  PbgFile.hpp
platform/: README.md  SUMMARY.md
platform/client/: .env.development  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
platform/client/src/: App.tsx  main.tsx
platform/client/src-tauri/: Cargo.toml  tauri.conf.json
platform/client/src-tauri/src/: lib.rs  loader.rs  main.rs
platform/client/src/components/: AppShell.tsx  NavRail.tsx  StatusBar.tsx  TitleBar.tsx
platform/client/src/i18n/: index.ts
platform/client/src/lib/: api.ts  auth-store.ts  queryClient.ts  utils.ts  ws.ts
platform/client/src/pages/: Channels.tsx  Friends.tsx  Lobby.tsx  Login.tsx  Messages.tsx  Profile.tsx  Register.tsx  RoomDetail.tsx  Rooms.tsx  Settings.tsx
platform/client/src/styles/: globals.css
platform/docs/: 01-design-constitution.md  02-architecture.md  03-data-model.md  04-api-spec.md  05-prompts-claude-design.md  06-i18n-framework.md  07-dev-setup.md  08-claude-design-how-to.md
platform/server/: .env.example  Makefile  README.md  docker-compose.dev.yml  go.mod
platform/server/cmd/gateway/: main.go
platform/server/cmd/migrate/: main.go
platform/server/internal/auth/: jwt.go  password.go  ttl.go
platform/server/internal/config/: config.go
platform/server/internal/db/: db.go
platform/server/internal/httpapi/: auth_handler.go  demo_handler.go  errors.go  landing.go  lobby_handler.go  middleware.go  pgx_rows.go  rooms_handler.go  router.go  users_handler.go
platform/server/internal/users/: service.go  uid.go
platform/server/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_seed_vanity_uids.down.sql  0002_seed_vanity_uids.up.sql  0003_seed_demo.down.sql  0003_seed_demo.up.sql
scripts/: run-2p.bat  run-2p.ps1
server/: .gitignore  Makefile  README.md  go.mod  go.sum
server/api/: openapi.yaml
server/cmd/api/: main.go
server/cmd/migrate/: main.go
server/cmd/relay/: main.go
server/config/: config.example.yaml
server/deploy/: Dockerfile.api  Dockerfile.relay  docker-compose.yml
server/deploy/caddy/: Caddyfile
server/internal/auth/: doc.go
server/internal/channel/: doc.go
server/internal/chat/: doc.go
server/internal/config/: config.go  config_test.go
server/internal/friend/: doc.go
server/internal/i18n/: doc.go
server/internal/lobby/: doc.go
server/internal/matchmaking/: doc.go
server/internal/platform/: doc.go
server/internal/room/: doc.go
server/internal/store/: doc.go
server/internal/user/: doc.go
server/internal/ws/: doc.go
tools/: batch_analyze.py  batch_analyze_v2.py  batch_analyze_v3.py  batch_analyze_v4.py  batch_analyze_v5.py  batch_analyze_v6.py  batch_analyze_v7.py  copy_to_monorepo.py  ida_helper.py
(+4 files in other folders)
