[package]
name = "th-platform-client"
version = "0.1.0"
description = "TH-Platform desktop launcher and social client"
authors = ["dwgx <somdhmtb@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-os     = "2"
tauri-plugin-process = "2"
tauri-plugin-shell  = "2"
tauri-plugin-store  = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"

# Windows-only: process spawning + DLL injection helpers
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_Security",
  "Win32_System_Memory",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic   = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
